# wahl-o-mat-data-science

./: Analyse.ipynb  README.md  Wahl-O-Mat Sachsen 2024_Datensatz.xlsx  Wahl-O-Mat Thüringen 2024_Datensatz.xlsx  pyproject.toml
