[tool.poetry]
name = "wahl-o-mat-data-science"
version = "0.1.0"
description = ""
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "CC-BY-SA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.0"
altair = "^5.4.1"
scikit-learn = "^1.5.1"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
